# Zeus

./: .dockerignore  .env.example  .gitignore  ADMIN.md  ADMIN_DASHBOARD.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  DOCKER_README.md  Dockerfile  NATIVE_DEPLOYMENT.md  QUICKSTART.md  README.md  SCALING.md  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start_native.sh  startup.sh  stop_native.sh
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  spl_academy_feature.md  suggested_commands.md  task_completion.md
configs/: training_config.yaml
data/feedback/: approved_training.jsonl  corrections_training.jsonl  generated_training.jsonl  new_validated_queries.jsonl  user_feedback.jsonl
data/raw/: README.md  train_advanced.jsonl  train_aggregation.jsonl  train_autogenerated.jsonl  train_basic.jsonl  train_clarification.jsonl  train_intermediate.jsonl  train_security.jsonl  train_suricata.jsonl  train_sysmon.jsonl  train_zeekAndBro.jsonl
data/wazuh_rag/: summary.json  test_results.json  wazuh_field_data.json
evaluation_results/: evaluation_results.json  predictions.jsonl  results.csv  summary.json
examples/: api_client_example.py  basic_usage.py  batch_processing.py
models/splunk-query-llm/: adapter_config.json  all_results.json  tokenizer.json  tokenizer_config.json  trainer_state.json
models/splunk-query-llm-v2/: adapter_config.json  train_results.json  trainer_state.json
scripts/: check_gpu.sh  check_health.sh  create_admin_user.py  create_postgres_db.py  download_base_model.py  fetch_wazuh_fields.py  fix_postgres.sh  generate_training_queries.py  init_db.py  migrate_add_training_jobs.py  migrate_ldap.py  populate_approved_cache.py  quick_start.sh  scale_api.sh  setup_postgres.sh  test_zeus_wazuh.py
src/data_preparation/: data_formatter.py  data_loader.py  data_validator.py  prepare_data.py
src/database/: __init__.py  auth.py  config.py  database.py  ldap_auth.py  (+1 more)
web/: academy.html  admin.html  auth-test.html  auth.js  chat.html  index.html
(+12 files in other folders)
